# haskell-tcg-cert

./: .gitignore  Containerfile.static  README.md  cabal.project  cabal.project.container  cabal.project.static  cabal.project.windows  stack-static.yaml  stack.yaml
.github/workflows/: ci.yml  release.yml
docs/: compliance-test-guide.adoc  compliance-test-guide.md  tcg-platform-cert-intro.pptx  user-guide.md
platform-hardware-info/: LICENSE  platform-hardware-info.cabal  stack.yaml
platform-hardware-info/data/: usb.ids
platform-hardware-info/src/Data/: HardwareInfo.hs
platform-hardware-info/src/Data/HardwareInfo/: Class.hs  Darwin.hs  Linux.hs  Types.hs  Windows.hs
platform-hardware-info/src/Data/HardwareInfo/Linux/: Block.hs  Bluetooth.hs  Firmware.hs  Input.hs  Nvme.hs  Pci.hs  PciIds.hs  Sysfs.hs  Usb.hs  UsbIds.hs
platform-hardware-info/src/Data/HardwareInfo/Smbios/: Parser.hs  Types.hs
platform-hardware-info/src/Data/HardwareInfo/Windows/: Nvme.hs  SetupApi.hs  Smbios.hs
platform-hardware-info/test/: Tests.hs
scripts/: build-macos.sh  build-static.sh
tcg-platform-cert/: tcg-platform-cert.cabal
tcg-platform-cert-compliance/: CHANGELOG.md  LICENSE  tcg-platform-cert-compliance.cabal
tcg-platform-cert-compliance/src/Data/X509/TCG/: Compliance.hs
tcg-platform-cert-compliance/src/Data/X509/TCG/Compliance/: ASN1.hs  Chain.hs  ChainCompliance.hs  Check.hs  Delta.hs  Errata.hs  Extension.hs  Internal.hs  Reference.hs  Registry.hs  Result.hs  Security.hs  Structural.hs  Suggestion.hs  Types.hs  Value.hs
tcg-platform-cert-compliance/test/: ChainComplianceSpec.hs  ComplianceCheckSpec.hs  ComplianceGuideSpec.hs  ComplianceSpec.hs  EndToEndSpec.hs  FuzzerSpec.hs  PaccorSpec.hs  SBVProofs.hs  SuggestionSpec.hs  Tests.hs
tcg-platform-cert-util/: LICENSE  README.md  tcg-platform-cert-util.cabal
tcg-platform-cert-util/docs/: user-guide.adoc
tcg-platform-cert-util/examples/: README.md  congatec-pa5-embedded.yaml  edge-gateway-delta.yaml  edge-gateway.yaml  embedded-system-delta.yaml  embedded-system.yaml  enterprise-server-delta.yaml  enterprise-server.yaml  iot-device-delta.yaml  iot-device.yaml  paccor-converted.yaml  paccor-direct-cert.pem  paccor-extended-with-cert.yaml  paccor-extended.json  paccor-extended.yaml  paccor-sample.json  workstation-delta.yaml  workstation.yaml
tcg-platform-cert-util/src/: Main.hs
tcg-platform-cert-util/src/Data/X509/TCG/Util/: ASN1.hs  CLI.hs  Certificate.hs  Config.hs  ConfigLint.hs  Display.hs  HardwareCollector.hs  IanaPen.hs  JsonReport.hs  OID.hs  Paccor.hs  PreIssuance.hs
tcg-platform-cert-util/test/: ASN1Tests.hs  ConfigLintTests.hs  ConfigTests.hs  CryptoAlgorithmTests.hs  DisplayTests.hs  IanaPenTests.hs  IntegrationTests.hs  JsonReportTests.hs  PaccorTests.hs  PreIssuanceTests.hs  SBVTests.hs  Tests.hs  ValidationTests.hs
tcg-platform-cert-util/test-data/certs/: cui-test.pem  final-test.pem  test-ca-cert.pem  test-ek-cert.pem
tcg-platform-cert-util/test-data/keys/: test-ca-key.pem  test-ek-key.pem  test-ek.csr
tcg-platform-cert-util/test/fixtures/: ComponentList.json  Extensions.json  PolicyReference.json  TestCA.cert.pem
tcg-platform-cert-validation/: tcg-platform-cert-validation.cabal
tcg-platform-cert-validation/src/Data/X509/TCG/: Validation.hs
tcg-platform-cert-validation/src/Data/X509/TCG/Validation/: Cache.hs  Internal.hs  Signature.hs  Types.hs
tcg-platform-cert-validation/tests/: Tests.hs
tcg-platform-cert-validation/tests/Tests/: Arbitrary.hs  Cache.hs  Internal.hs  Properties.hs  SBV.hs  Validation.hs
tcg-platform-cert/Data/X509/: TCG.hs  TCG_Clean.hs
tcg-platform-cert/Data/X509/TCG/: Attributes.hs  Certification.hs  Component.hs  Delta.hs  InputValidation.hs  OID.hs  Operations.hs  Platform.hs  Types.hs  Utils.hs  Validation.hs
tcg-platform-cert/Tests/: Tests.hs
tcg-platform-cert/Tests/Tests/: Arbitrary.hs  Attributes.hs  Component.hs  Delta.hs  GoldenASN1.hs  InputValidation.hs  OID.hs  Operations.hs  Platform.hs  Properties.hs  SBV.hs  Utils.hs  Validation.hs
test-certs/: acert0.der  acert1.der  acert2.der  acert3.der  acert4.der  ca-key.pem
